--- a/_config.yml
+++ b/_config.yml
@@ -4,15 +4,14 @@ markdown: redcarpet
 
 # 作者信息
 author: 
-  name: 刘惠民
-  email: liu9662@gmail.com
-  link: http://www.usct.edu.cn
-  github: http://github.com/liuhuimin
+  name: zinber
+  email: luckyboyzb@gmail.com
+  github: http://github.com/zinbers
 
 # 站点信息
-title: 刘惠民的博客 
-description: 刘惠民的博客
-url: http://www.usct.edu.cn
+title: zinber的博客 
+description: zinber的博客
+url: http://google.com
 rss_url: /pages/atom.xml
 
 # gavatar头像及Favicon
@@ -22,11 +21,11 @@ favicon: /public/img/@.ico
 # google analytics 设置
 ga:
   id: UA-52177833-1
-  url: liuhuimin.github.io
+  url: zinbers.github.io
 
 # disqus 设置
 disqus:
-  shortname: liuhuimin
+  shortname: zinber
 
 # 主题设置，自动激活某个标签
 active: 数据挖掘
